--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -8,7 +8,7 @@ subtitle:
 description:
 author: qee_wong
 language:
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
